--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-beautifulsoup4==4.13.4
 blinker==1.9.0
 click==8.2.1
+feedparser==6.0.11
 Flask==3.1.1
+greenlet==3.2.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+sgmllib3k==1.0.0
 soupsieve==2.7
 typing_extensions==4.13.2
 Werkzeug==3.1.3
